[project]
name = "onnx-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Adrian Lyjak", email = "adrian@chatmeter.com" }
]
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.10.0",
    "onnx-graphsurgeon>=0.3.27",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.1",
    "pillow>=11.1.0",
    "requests>=2.32.3",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.2",
    "graphviz>=0.20.3",
    "kokoro>=0.7.3",
    "onnxscript>=0.1.0",
    "pyinstrument>=5.0.1",
]

[project.scripts]
onnx = "onnx_tutorial:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = ["onnxoptimizer"]

[[tool.uv.index]]
url = "https://pypi.ngc.nvidia.com/"
